--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                             <label for="testDriveRequirements" class="form-label">Special Requirements (Optional)</label>
                             <textarea class="form-control" id="testDriveRequirements" rows="3" placeholder="Any specific requirements or questions..."></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Schedule Test Drive</button>
+                        <button type="submit" class="btn btn-primary w-100" onclick="setDefaultText()">Schedule Test Drive</button>
                     </form>
                 </div>
             </div>
@@ -466,7 +466,7 @@
                             <label for="quoteComments" class="form-label">Additional Comments</label>
                             <textarea class="form-control" id="quoteComments" rows="3" placeholder="Any specific requirements, options, or questions..."></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Request Quote</button>
+                        <button type="submit" class="btn btn-primary w-100" onclick="setDefaultText1()">Request Quote</button>
                     </form>
                 </div>
             </div>
